tests/machine/x/c/save_jsonl_stdout.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/save_jsonl_stdout.c: In function ‘_is_number’:
/workspace/mochi/tests/machine/x/c/save_jsonl_stdout.c:19:10: warning: implicit declaration of function ‘_isnum’; did you mean ‘_is_number’? [-Wimplicit-function-declaration]
   19 |     if (!_isnum(*p))
      |          ^~~~~~
      |          _is_number
/workspace/mochi/tests/machine/x/c/save_jsonl_stdout.c: At top level:
/workspace/mochi/tests/machine/x/c/save_jsonl_stdout.c:23:33: error: unknown type name ‘map_string’
   23 | static void _write_obj(FILE *f, map_string m) {
      |                                 ^~~~~~~~~~
/workspace/mochi/tests/machine/x/c/save_jsonl_stdout.c:37:24: error: unknown type name ‘list_map_string’
   37 | static void _save_json(list_map_string rows, const char *path) {
      |                        ^~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/save_jsonl_stdout.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/save_jsonl_stdout.c:83:3: warning: implicit declaration of function ‘_save_json’ [-Wimplicit-function-declaration]
   83 |   _save_json(people, "-");
      |   ^~~~~~~~~~

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T02:49:32Z
